terraform-drupal/load-balancer.tf
resource "aws_lb" "lb" {
  name               = "drupal-lb-${var.user}"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.lb-sg.id]
  subnets            = [aws_subnet.pub1.id, aws_subnet.pub2.id]
  tags = {
    Environment = "drupal-lb-${var.user}"
  }
}

resource "aws_lb_target_group" "my-tg" {
  target_type = "instance"
  name     = "drupal-tg-${var.user}"
  port     = 80
  protocol = "HTTP"
  vpc_id   = data.aws_vpc.vpc.id
}

resource "aws_lb_target_group_attachment" "instance-atc1" {
  target_group_arn = aws_lb_target_group.my-tg.arn
  target_id = aws_instance.webserver-1.id
}

resource "aws_lb_target_group_attachment" "instance-atc2" {
  target_group_arn = aws_lb_target_group.my-tg.arn
  target_id = aws_instance.webserver-2.id
}

resource "aws_lb_listener" "front_end" {
  load_balancer_arn = aws_lb.lb.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.my-tg.arn
  }
}
